# vm-instance-family-scraper

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  mypy.ini  pyproject.toml
src/: __init__.py  abstract.py  azure_types.py  constants.py  database.py  documents.py  families.py  mixins.py  parser.py  repository.py  series.py  test.py
src/azure_types/: capabilities.py  instances.py  series.py  shared.py
src/parsers/: families.py  multi_series.py  series.py  shared.py  utility.py
tests/: __init__.py  __main__.py  shared.py  test_azure_types.py  test_discovery.py  test_documents.py  test_e2e.py  test_family_parser.py  test_multi_series_parser.py  test_repository.py  test_series_parsers.py
